<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/layout_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/banner_ad_preload_mode"
                android:textColor="#fff"
                android:textSize="16sp"
                tools:ignore="InvalidId" />

            <Button
                android:id="@+id/bn_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_ad" />

            <Button
                android:id="@+id/bn_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_ad" />

            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/banner_ad_normal_mode"
                android:textColor="#fff"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                tools:ignore="InvalidId" />

            <Button
                android:id="@+id/bn_load_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_and_show_ad" />

            <com.rixengine.api.AlxBannerView
                android:id="@+id/do_ad_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <FrameLayout
                android:id="@+id/ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:text="123412354234"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>