<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_load"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/load_ad"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1a000000"
        app:layout_constraintTop_toBottomOf="@+id/tv_load" />

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/show_ad"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_line" />

    <View
        android:id="@+id/v_line_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1a000000"
        app:layout_constraintTop_toBottomOf="@+id/tv_show" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tip_message"
        android:textColor="#000000"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_line_two" />
</androidx.constraintlayout.widget.ConstraintLayout>